# voice_helper

./: pyproject.toml
voice_helper/: speech_to_text.py
