[project]
name = "voice_helper"
version = "0.0.1"
requires-python = ">=3.10"
description = ""
readme = "README.md"
authors = [
    { name = "Мосунов Родион Дмитриевич", email = "mosunov2003@mail.ru" },
]

dependencies = []

[tool.setuptools]
py-modules = []

[tool.ruff]
preview = true
line-length = 100
indent-width = 4
exclude = [
    "docs",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "C901", # flake8-complexity
    "UP", # pyupgrade
    "RUF021", #  Parenthesize around `a and b` when chaining `and` and `or`
    "ISC", # flakes-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "INT", # flake8-gettext
    "ERA", # flake8-eradicate
    "EM", # flake8-errmsg
#    "DTZ", # flake8-datetimez
]
#                   mod    mod    object
logger-objects = ["mylib.logger.logger"]
#logger-objects =

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"examples/*" = ["T20"]
"scripts/*" = ["T20"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.mypy]
strict = true
show_error_codes = true
show_column_numbers = true
show_error_context = true